objects/CN_Demo_Report_Account__c.object
<CustomObject>
    <fields>
        <fullName>CN_Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Demo Report(Account)</relationshipLabel>
        <relationshipName>Demo_Report_Account</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>CN_Activity_Type__c</fullName>
        <label>Activity Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Channel__c</fullName>
        <label>Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Chef_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Chef Request</label>
        <referenceTo>CN_Chef_Request__c</referenceTo>
        <relationshipLabel>Demo Report(Account)</relationshipLabel>
        <relationshipName>Demo_Report_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CN_Customer_ID__c</fullName>
        <label>Customer ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Demo_Products__c</fullName>
        <label>Demo Products</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CN_Demo_Report__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Demo Report</label>
        <referenceTo>CN_Demo_Report__c</referenceTo>
        <relationshipLabel>Demo Report(Account)</relationshipLabel>
        <relationshipName>Demo_Report_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Event_Theme__c</fullName>
        <label>Event Theme</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Guest_Chef__c</fullName>
        <label>Guest Chef</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Number_of_People__c</fullName>
        <label>Number of People</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CN_Number_of_Recipes__c</fullName>
        <label>Number of Recipes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CN_Report_Creator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Report Creator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Demo_Report_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_SAP_Concur_Travel_Cost__c</fullName>
        <label>SAP Concur Travel Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Sales_Attendance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales Attendance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Sales_Name__c</fullName>
        <label>Sales Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Demo Report(Account)</label>
    <nameField>
        <label>Demo Report No</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Demo Report(Account)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>